[project]
name = "data-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.15.0",
    "duckdb>=1.3.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "streamlit>=1.58.0",
]
